Correct z-index on bootstrap alert

--- a/public/css/sneezy.css
+++ b/public/css/sneezy.css
@@ -71,6 +71,7 @@ h1 {
 	position: absolute;
 	top: 50px;
 	width: 200px;
+    z-index: 2;
 }
 
 .grid {
